Fix widget bar style on Firefox

--- a/blaseball/blaseball-userscript.css
+++ b/blaseball/blaseball-userscript.css
@@ -391,7 +391,6 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    max-width: max-content;
     background-color: #171717;
     padding: 5px;
     margin: 0 5px;
